tests/ui/error-codes/E0565-1.stderr
error[E0565]: malformed `deprecated` attribute input
  --> $DIR/E0565-1.rs:2:3
   |
LL | #[deprecated("since")]
   |   ^^^^^^^^^^^-------^
   |              |
   |              didn't expect a literal here
   |
help: try using `=` instead
   |
LL - #[deprecated("since")]
LL + #[deprecated = "since"]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0565`.
